// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should render with a click handler 1`] = `
<div
  className="root"
/>
`;

exports[`MenuItem should render with a linkRenderer 1`] = `
<div
  className="root"
>
  <span
    className="item"
  >
    <span
      key="children"
    >
      Awesome Brand Portal!
    </span>
  </span>
</div>
`;

exports[`MenuItem should render with all optional props 1`] = `
<div
  className="root awesomeClass"
>
  <span
    className="item"
  >
    <FakeIcon
      className="icon"
      direction="left"
      key="icon"
      svgClassName="awesomeSVG"
    />
    <span
      className="seriously I thought css modules would solve this precarious css specificity nonsense"
      key="children"
    >
      Awesome Brand Portal!
    </span>
  </span>
</div>
`;

exports[`MenuItem should render with icon and default props 1`] = `
<div
  className="root"
>
  <span
    className="item"
  >
    <FakeIcon
      className="icon"
      key="icon"
    />
    <span
      key="children"
    >
      Awesome Brand Portal!
    </span>
  </span>
</div>
`;

exports[`MenuItem should render with no icon and default props 1`] = `
<div
  className="root"
>
  <span
    className="item"
  >
    <span
      key="children"
    >
      Awesome Brand Portal!
    </span>
  </span>
</div>
`;
